--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 ECS Legacy Solution/.vs/Legacy solution/v16/.suo
 Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
 Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
+Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
