Recreate Folder Strukture

--- a/Grp50_HandInTwo/Grp50_HandInTwo/Grp50_HandInTwo.csproj
+++ b/Grp50_HandInTwo/Grp50_HandInTwo/Grp50_HandInTwo.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Business_Logic_Layer\Business_Logic_Layer.csproj" />
+  </ItemGroup>
+
 </Project>
