--- a/Grp50_HandInTwo/Grp50_HandInTwo/Grp50_HandInTwo.csproj
+++ b/Grp50_HandInTwo/Grp50_HandInTwo/Grp50_HandInTwo.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Business_Logic_Layer\Business_Logic_Layer.csproj" />
   </ItemGroup>
 
