--- a/Grp50_HandInTwo/Test_Program_Charge_Locker/Test_Program_Charge_Locker.csproj
+++ b/Grp50_HandInTwo/Test_Program_Charge_Locker/Test_Program_Charge_Locker.csproj
@@ -7,13 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Business_Logic_Layer\Business_Logic_Layer.csproj" />
     <ProjectReference Include="..\Grp50_HandInTwo\Grp50_HandInTwo.csproj" />
   </ItemGroup>
 
