--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
 Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
 Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
 Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
+Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
