--- a/Grp50_HandInTwo/Grp50_HandInTwo/Grp50_HandInTwo.csproj
+++ b/Grp50_HandInTwo/Grp50_HandInTwo/Grp50_HandInTwo.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="NSubstitute" Version="4.2.2" />
+    <PackageReference Include="NunitXml.TestLogger" Version="3.0.97" />
   </ItemGroup>
 
 </Project>
