--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
 Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
 Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
 Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
+Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
