--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
 Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
 Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
 Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
+Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
