Update of Lib and test and Dokuments

--- a/Grp50_HandInTwo/Grp50_HandInTwo/Grp50_HandInTwo.csproj
+++ b/Grp50_HandInTwo/Grp50_HandInTwo/Grp50_HandInTwo.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="NunitXml.TestLogger" Version="3.0.97" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Library\Library.csproj" />
+  </ItemGroup>
+
 </Project>
