--- a/Grp50_HandInTwo/Test_Program_Charge_Locker/Test_Program_Charge_Locker.csproj
+++ b/Grp50_HandInTwo/Test_Program_Charge_Locker/Test_Program_Charge_Locker.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Grp50_HandInTwo\Grp50_HandInTwo.csproj" />
+    <ProjectReference Include="..\Library\Library.csproj" />
   </ItemGroup>
 
 </Project>
