--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
 Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
 Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
 Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
+Grp50_HandInTwo/.vs/Grp50_HandInTwo/v16/.suo
